@@ -11,6 +11,24 @@ Trong repo này gồm 5 folder
 - `javafxsub` chứa mã nguồn ứng dụng subscriber, giao diện đồ hoạ
 - `publisher` và `subscriber` chứa mã nguồn cũ của pub và sub, giao diện dòng lệnh (CLI)
 
+## Cài đặt
+### Lưu ý
+Ứng dụng yêu cầu compile chạy với phiên bản **Java >= 17.0**
+
+### Đối với 2 ứng dụng GUI
+Để build ứng dụng, với 2 source code javafx của publisher và subscriber, chạy lệnh
+
+`gradlew jar`
+
+Tại thư mục `./build/libs/` được sinh ra, copy thư viện javafx ứng với hệ điều hành cần chạy vào đây (tải tại https://gluonhq.com/products/javafx/ rồi copy nội dung trong thư mục `javafx-sdk-*` trong file `.zip` vào) và chạy:
+
+`java -jar --module-path lib --add-modules javafx.controls,javafx.fxml <tên_file_jar>.jar`
+
+### Đối với các ứng dụng CLI còn lại
+**Cách 1:** Sử dụng IDE/ text editor có hỗ trợ compile và chạy code java, rồi chạy với entry là tệp chứa hàm `main` trong thư mục đó.
+
+**Cách 2:** Sử dụng compiler của java, include tất cả các file trong thư mục vào, với entry là file chứa hàm main để build ra 1 file .jar
+
 ## Phân công công việc
 ### Phần giao diện/ tính năng CLI
 - Đào Quang Hiếu & Đỗ Hồng Hà làm phần broker, collab trên Code with me
